--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                                 <td class="description">- defines the number and the height of each row</td>
                             </tr>
                             <tr>
-                                <td class="property">grid-template: _ / _;</td>
+                                <td class="property">grid-template: _ /_;</td>
                                 <td class="description">- shorthand to define rows and columns</td>
                             </tr>
                             <tr>
@@ -932,7 +932,7 @@
                                 <td class="description">- one greater than the row at which item to end</td>
                             </tr>
                             <tr>
-                                <td class="property">grid-row: _ / _</td>
+                                <td class="property">grid-row: _ /_;</td>
                                 <td class="description">- shorthamd to define the start and the end for a row</td>
                             </tr>
                             <tr>
@@ -948,7 +948,7 @@
                                 <td class="description">- shorthamd to define the start and the end for a column</td>
                             </tr>
                             <tr>
-                                <td class="property">grid-area: _ / _ / _ / _;</td>
+                                <td class="property">grid-area: _ /_ /_/_;</td>
                                 <td class="description">- combines row and column start/end/span values</td>
                             </tr>
                             <tr>
